<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="25dp"
    android:padding="10dp"
    android:background="@drawable/border"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:paddingTop="5dp"
        android:id="@+id/player_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        />



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
       android:layout_marginLeft="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/player_img"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/bornTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/born"
            android:layout_marginTop="8dp"
            android:textSize="16sp"/>



        <TextView
            android:id="@+id/roleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/role"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/battingStyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/batting_style"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/bowlingStyleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/bowling_style"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/nationalityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/nationality"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/iplDebutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/ipl_debut"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/auctionPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Auction Price"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

    </LinearLayout>



    <TableLayout
        android:layout_marginTop="5dp"
        android:layout_below="@id/player_img"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Matches:"
                android:textStyle="bold"
                android:paddingEnd="8dp"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/matchesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Runs:"
                android:textStyle="bold"
                android:paddingEnd="8dp"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/runsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wickets:"
                android:textStyle="bold"
                android:paddingEnd="8dp"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/wicketsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fifties:"
                android:textStyle="bold"
                android:paddingEnd="8dp"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/fiftiesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hundreds:"
                android:textStyle="bold"
                android:paddingEnd="8dp"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/hundredsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Highest Score:"
                android:textStyle="bold"
                android:paddingEnd="8dp"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/highestScoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0*"/>
        </TableRow>

    </TableLayout>




</RelativeLayout>